# project_1

./: CMakeLists.txt  IdentifierAutomaton.h  Lexer.cpp  Lexer.h  MLCommentAutomaton.cpp  SLCommentAutomaton.cpp  SLCommentAutomaton.h  StringAutomaton.cpp  TemplateAutomaton.cpp  TemplateAutomaton.h  Token.cpp  in10.txt  main.cpp  test_input.txt
Lexer/: Automaton.h  IdentifierAutomaton.cpp  Lexer.h  MLCommentAutomaton.h  SLCommentAutomaton.h  StringAutomaton.h  TemplateAutomaton.cpp  Token.cpp  Token.h
Parser/: DatalogProgram.cpp  DatalogProgram.h  Parameter.cpp  Parameter.h  Parser.cpp  Parser.h  Predicate.cpp  Predicate.h  Rule.cpp  Rule.h
